* Fix AtTimeZone mapping

Version 0.2 - 2013-09-18
* Fix usage mixture between Div operator and function
* Add array support in operators

Version 0.1 - 2013-08-28
* Initial release