@@ -1,3 +1,4 @@
+* Add columns definitions to Function
 * Fix AtTimeZone mapping
 
 Version 0.2 - 2013-09-18
